--- a/tv_show_app/templates/edit_show.html
+++ b/tv_show_app/templates/edit_show.html
@@ -9,7 +9,13 @@
         
     </head>
     <body>
-
+        {% if messages %}
+            <ul class="messages">    
+            {% for message in messages %}    
+                <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>    
+            {% endfor %}
+            </ul>
+        {% endif %}
         <h1>All the Users</h1>
     
         <div id="wrapper">
