--- a/tv_show_app/templates/show.html
+++ b/tv_show_app/templates/show.html
@@ -7,6 +7,13 @@
         <link rel="stylesheet" href="{% static 'css/style.css' %}">    
     </head>
     <body>
+        {% if messages %}
+            <ul class="messages">    
+            {% for message in messages %}    
+                <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>    
+            {% endfor %}
+            </ul>
+        {% endif %}
         <p>{{shows.title}}</p>
         <p>{{shows.description}}</p>
         <p>{{shows.releaseDate}}</p>
