--- a/tv_show_app/templates/index.html
+++ b/tv_show_app/templates/index.html
@@ -15,7 +15,7 @@
             </ul>
         {% endif %}
         <h1>All Shows</h1>
-        <p>Welcome to the TV Shows DB</p>
+        <p>Welcome {{user.username}} to the TV Shows DB</p>
         <table style="width:100">
             <tr>
                 <th>Title</th>
@@ -42,5 +42,6 @@
             {% endfor %}
         </table>
         <a href="/shows/new">Add a New Show</a>
+        <a href="logout"><Logout>Logout</a>
     </body>
 </html>
